--- a/main22.ipynb
+++ b/main22.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "def main():\n",
     "    window = Window()\n",
     "    window.title(\"Frame框架\")\n",
-    "    window.geometry(\"640x400\")\n",
+    "    window.geometry(\"640x400+300+200\")\n",
+    "    window.resizable(0,0)\n",
     "    window.mainloop()\n",
     "\n",
     "if __name__ == \"__main__\":\n",
