--- a/main22.ipynb
+++ b/main22.ipynb
@@ -2,22 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from PIL import Image, ImageTk\n",
+    "import tkinter.font as tkFont\n",
     "\n",
     "class Window(tk.Tk):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        bgImage = Image.open('./640X400.jpg')        \n",
+    "        #-----建立背景-----\n",
+    "        bgImage = Image.open('./640X400.jpg')  \n",
+    "        #bgImage = Image.open('./1920x1200.jpg')        \n",
     "        self.tkImage = ImageTk.PhotoImage(bgImage)\n",
     "        mainCanvas = tk.Canvas(self,width=640,height=400)\n",
     "        mainCanvas.create_image(0,0,anchor=tk.NW,image=self.tkImage)              \n",
-    "        mainCanvas.pack()\n",
-    "        \n",
+    "        mainCanvas.pack(fill=tk.BOTH, expand=True)\n",
+    "        #end-----建立背景-----\n",
+    "        #建立Label\n",
+    "        helv36 = tkFont.Font(family='Helvetica',size=36, weight='bold')\n",
+    "        tk.Label(mainCanvas,text='職能發展學院',font=helv36,background='#C9C8CD',foreground='#888888').place(x=100,y=100)\n",
     "\n",
     "def main():\n",
     "    window = Window()\n",
