--- a/main22.ipynb
+++ b/main22.ipynb
@@ -2,13 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "userClick1\n",
+      "userClick2\n",
+      "userClick1\n",
+      "userClick1\n",
+      "userClick2\n",
+      "userClick2\n",
+      "userClick2\n",
+      "userClick2\n",
+      "userClick2\n",
+      "userClick2\n",
+      "userClick2\n",
+      "userClick2\n",
+      "userClick2\n",
+      "userClick2\n",
+      "userClick1\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "from PIL import Image, ImageTk\n",
     "import tkinter.font as tkFont\n",
+    "\n",
+    "class ImageButton(tk.Button):\n",
+    "    def __init__(self,parents,**kwargs):\n",
+    "        super().__init__(parents,**kwargs)\n",
+    "        bgImage1 = Image.open('btn1.png')\n",
+    "        self.tkImage1 = ImageTk.PhotoImage(bgImage1)\n",
+    "        self.config(image=self.tkImage1,borderwidth=0)\n",
     "\n",
     "class Window(tk.Tk):\n",
     "    def __init__(self):\n",
@@ -24,6 +53,27 @@
     "        #建立Label\n",
     "        helv36 = tkFont.Font(family='Helvetica',size=36, weight='bold')\n",
     "        tk.Label(mainCanvas,text='職能發展學院',font=helv36,background='#C9C8CD',foreground='#888888').place(x=100,y=100)\n",
+    "        #end------建立Lable----------\n",
+    "\n",
+    "        #-----建立ButtonsFrame----------\n",
+    "        buttonFrame = tk.Frame(mainCanvas,background=\"#ffffff\")\n",
+    "        buttonFrame.place(x=100,y=50)\n",
+    "        #end-----建立ButtonsFrame-------\n",
+    "\n",
+    "        #-----建立Button-----      \n",
+    "        btn1 = ImageButton(buttonFrame,command=self.btn1Click)\n",
+    "        btn1.pack()\n",
+    "\n",
+    "        btn2 = ImageButton(buttonFrame,command=self.btn2Click)\n",
+    "        btn2.pack()\n",
+    "        #end-----建立Button-----\n",
+    "\n",
+    "    def btn1Click(self):\n",
+    "        print(\"userClick1\")\n",
+    "\n",
+    "    def btn2Click(self):\n",
+    "        print(\"userClick2\")\n",
+    "\n",
     "\n",
     "def main():\n",
     "    window = Window()\n",
